code25_all/scala/11811371.txt
Seq[Char]
def f(s: Seq[Char]) = s

String
scala> f("this")
res8: Seq[Char] = this

map
scala> List("this").map(s => f(s))
res9: List[Seq[Char]] = List(this)

scala> List("this").map(f)
<console>:10: error: type mismatch;
 found   : Seq[Char] => Seq[Char]
 required: java.lang.String => ?
              List("this").map(f)
                               ^

